# XianChu

./: .gitignore  AGENT_robotExpert.md  ARTISTIC_STATEMENT.md  DESIGN.md  PRD.md  PRD_PLAN.md  README.md  TASK_LIST.md  TEAM.md
calibration/: README.md
configs/: README.md
contracts/: README.md
contracts/data_schema/: episode_schema.md  music_spec.md
contracts/frames/: tf_tree.md
contracts/ros_interfaces/: README.md
contracts/safety/: limits.md
data_registry/: README.md  external_artifacts.md
docs/: README.md
docs/engineering/: README.md  build_and_run.md  data_capture.md  demo_safety.md  evaluation_protocol.md
tools/: README.md
ws/: README.md
ws/src/violin_robot_bringup/: README.md  package.xml  setup.cfg  setup.py
ws/src/violin_robot_bringup/launch/: v0_mock.launch.py
ws/src/violin_robot_bringup/resource/: violin_robot_bringup
ws/src/violin_robot_control/: README.md  package.xml  setup.cfg  setup.py
ws/src/violin_robot_control/resource/: violin_robot_control
ws/src/violin_robot_control/violin_robot_control/: __init__.py  tactile_guard_node.py
ws/src/violin_robot_drivers/: README.md  package.xml  setup.cfg  setup.py
ws/src/violin_robot_drivers/resource/: violin_robot_drivers
ws/src/violin_robot_drivers/violin_robot_drivers/: driver_mock_node.py
ws/src/violin_robot_eval/: README.md
ws/src/violin_robot_interfaces/: README.md
ws/src/violin_robot_music_spec/: README.md  package.xml  setup.cfg  setup.py
ws/src/violin_robot_music_spec/resource/: violin_robot_music_spec
ws/src/violin_robot_policy/: README.md  package.xml  setup.cfg  setup.py
ws/src/violin_robot_policy/resource/: violin_robot_policy
ws/src/violin_robot_policy/violin_robot_policy/: policy_stub_node.py
ws/src/violin_robot_skills/: README.md
ws/src/violin_robot_state/: README.md
(+1 files in other folders)
