<?xml version="1.0"?>
<package format="3">
  <name>violin_robot_control</name>
  <version>0.0.1</version>
  <description>Tactile guard (v0 gates command_raw -> command and raises e-stop).</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

