<?xml version="1.0"?>
<package format="3">
  <name>violin_robot_drivers</name>
  <version>0.0.1</version>
  <description>Mock and real hardware drivers (v0 uses mock).</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

