<?xml version="1.0"?>
<package format="3">
  <name>violin_robot_policy</name>
  <version>0.0.1</version>
  <description>Policy stub (v0 maps music_spec to command_raw JSON).</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

